# zerofin

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml  test_bad_code.py
scripts/: backfill.py  backfill_missing.py  collect_test.py  daily_collect.py  run_correlations.py  run_mentions.py  run_verification.py  seed_entities.py  setup_databases.py  test_connections.py  test_news.py
scripts/tests/: collect_test.py  test_connections.py  test_keys.py  test_single.py  test_two_pass.py  test_verification.py
src/zerofin/: __init__.py  config.py  constants.py
src/zerofin/ai/: __init__.py  extraction.py  mentions.py  provider.py  verification.py
src/zerofin/analysis/: correlations.py  filters.py  monthly.py  partial.py  transforms.py
src/zerofin/data/: collector.py  economic.py  news.py  prices.py  tickers.py
src/zerofin/models/: correlations.py  entities.py
src/zerofin/storage/: graph.py  postgres.py
tests/: test_correlations.py  test_daily_mentions.py  test_extraction.py  test_filters.py  test_mentions.py  test_models.py  test_partial.py  test_postgres_verification.py  test_provider.py  test_status_protection.py  test_transforms.py  test_verification.py
