[project]
name = "zerofin"
version = "0.1.0"
description = "Personal financial intelligence system — collects market data, discovers relationships via knowledge graph, generates plain-English briefings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "yfinance",
    "fredapi",
    "psycopg[binary]",
    "neo4j",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "pendulum",
    "voyageai",
    "polars",
    "fastapi",
    "uvicorn",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "defusedxml>=0.7.1",
    "scikit-learn>=1.8.0",
    "langchain>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-anthropic>=1.4.0",
    "platformdirs>=4.9.4",
    "langchain-experimental>=0.4.1",
    "instructor>=1.14.5",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
